# diffpy.structure

./: .buildinfo  .codecov.yml  .coveragerc  .flake8  .gitarchive.cfg  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  CODE-OF-CONDUCT.rst  LICENSE-DANSE.rst  LICENSE-pymmlib.rst  LICENSE.rst  LICENSE.txt  LICENSE_DANSE.rst  LICENSE_DANSE.txt  LICENSE_pymmlib.rst  LICENSE_pymmlib.txt  MANIFEST.in  Make.mm  README.md  README.rst  README.txt  cookiecutter.json  diffpy.structure.applications.html  diffpy.structure.apps.html  diffpy.structure.expansion.html  diffpy.structure.parsers.html  environment.yml  fix_setuptools_chmod.py  genindex.html  (+20 more)
.codespell/: ignore_lines.txt  ignore_words.txt
.github/ISSUE_TEMPLATE/: bug_feature.md  release_checklist.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-and-publish-docs-on-dispatch.yml  build-wheel-release-upload.yml  check-news-item.yml  codecov.yml  docs.yml  main.yml  matrix-and-codecov-on-merge-to-main.yml  matrix-and-codecov.yml  publish-docs-on-release.yml  test.yml  tests-on-pr.yml
Structure/: Atom.py  Lattice.py  Make.mm  PDFFitStructure.py  PeriodicTable.py  SpaceGroups.py  Structure.py  StructureErrors.py  SymmetryUtilities.py  __init__.py  atom.py  bratomsstructure.py  exceptions.py  lattice.py  pdffitstructure.py  structure.py  utils.py  version.py
Structure/Parsers/: Make.mm  P_auto.py  P_bratoms.py  P_cif.py  P_discus.py  P_pdb.py  P_pdffit.py  P_rawxyz.py  P_xcfg.py  P_xyz.py  StructureParser.py  __init__.py  import_helper.py  parser_index.py
Structure/expansion/: __init__.py  makeCuboctahedron.py  makeEllipsoid.py  makeSpheroid.py  shapeUtils.py  supercell.py
_modules/: index.html
_modules/diffpy/: structure.html
_modules/diffpy/structure/: _legacy_importer.html  atom.html  lattice.html  parsers.html  pdffitstructure.html  spacegroupmod.html  spacegroups.html  structure.html  structure_app.html  structureerrors.html  symmetryutilities.html  utils.html
_sources/: diffpy.structure.expansion.rst.txt  index.rst.txt  index.txt  install.txt  intro.txt  mod-spacegroup.rst.txt  release.rst.txt
_sources/api/: diffpy.Structure.Parsers.txt  diffpy.Structure.applications.txt  diffpy.Structure.expansion.rst.txt  diffpy.Structure.expansion.txt  diffpy.Structure.txt  diffpy.structure.applications.rst.txt  diffpy.structure.apps.rst.txt  diffpy.txt  modules.txt
_static/: classic.css  copybutton.js  documentation_options.js
api/: api.html  diffpy.Structure.Parsers.html  diffpy.Structure.applications.html  diffpy.Structure.expansion.html  diffpy.Structure.html  diffpy.Structure.tests.html  diffpy.html  diffpy.structure.applications.html  diffpy.structure.apps.html  diffpy.structure.expansion.html  diffpy.structure.html  diffpy.structure.parsers.html  modules.html
applications/: anyeye  cell_expand.py  setup.py  transtru
applications/anyeye/: __init__.py  anyeye.py  setup.py
applications/transtru/: setup.cfg  setup.py  transtru
conda-recipe/: bld.bat  build.sh  meta.yaml  run_test.py
devutils/: README.md  makesdist  sgtbx_extra_groups.py
diffpy/: __init__.py
diffpy/Structure/: SpaceGroups.py  StructureErrors.py  SymmetryUtilities.py  __init__.py  atom.py  bratomsstructure.py  gitarchive.cfg  lattice.py  mmlibspacegroups.py  pdffitstructure.py  sgtbxspacegroups.py  sgtbxspacegroups.py.tmp  spacegroupmod.py  structure.py  utils.py  version.py
diffpy/Structure/Parsers/: P_auto.py  P_bratoms.py  P_cif.py  P_discus.py  P_pdb.py  P_pdffit.py  (+7 more)
doc/: Makefile  epydoc.cfg
doc/epydoc/: Makefile  epydoc.cfg
doc/manual/: Makefile  make.bat
doc/source/: conf.py  getting-started.rst  index.rst  license.rst  mod_atom.rst  mod_lattice.rst  release.rst
docs/: DevelopersNotes.txt
docs/source/: conf.py  license.rst
examples/: Make.mm  StructureOperations.py  cartCoorExamples.py  demoCartesianCoordinates.py  expandAndConstrain.py  expandcell.py
news/: 3.13.rst  CI-badge-fix.rst  add-devutils-readme.rst  ase-adapter.rst  assignUniqueLabels-deprecation.rst  change-utility-script.rst  changlog.rst  clean-workflows.rst  codecov.rst  deprecate-addNewItem.rst  deprecate-apps.rst  deprecate-assignUniqueLabels.rst  deprecate-atom.rst  deprecate-camel-case-1.rst  deprecate-expansion-utilities-1.rst  deprecate-getLastAtom.rst  deprecate-getParser.rst  deprecate-lattice-readstr-method.rst  deprecate-lattice.rst  deprecate-parsefile.rst  deprecate-parser-1.rst  deprecate-parser-display.rst  deprecate-private-linkatom.rst  deprecate-spacegroup.rst  deprecate-structure-function.rst  deprecate-symmetryutilities-1.rst  deprecate-symmetryutilities-2.rst  deprecate-symmetryutilities-3.rst  deprecate-symmetryutilities-4.rst  deprecate-symmetryutilities-5.rst  deprecate-symmetryutilities-6.rst  deprecate-symmetryutilities-7.rst  deprecate-toLine.rst  deprecate-utils.rst  documentation-fix.rst  fix-close-duplicate-atom.rst  fix-deprecation-camel-case-2.rst  fix-deprecation.rst  fix-load-structure.rst  folder.rst  (+8 more)
requirements/: README.txt  build.txt  docs.txt  pip.txt  run.txt  test.txt
src/diffpy/: Structure.py  __init__.py
tests/: Make.mm  TestLattice.py  TestP_cif.py  TestP_discus.py  TestP_pdffit.py  TestParsers.py  TestStructure.py  TestStructureModule.py  TestSuperCell.py  TestSymmetryUtilities.py  __init__.py  alltests.py  conftest.py  test_atom.py  test_expansion.py  test_functions.py  test_lattice.py  test_loadstructure.py  test_p_cif.py  test_p_discus.py  test_p_pdffit.py  test_parsers.py  test_spacegroups.py  test_structure.py  test_supercell.py  test_symmetryutilities.py  test_utils.py  test_version.py
tests/testdata/: BubbleRaftShort.xcfg  CdSe-wurtzite.stru  CdSe_bulk.stru  GaAs.inp  LiCl-bad.cif  MnO2.cif  Ni-discus.stru  Ni.stru  Ni_prim123.stru  PbTe.cif  TeI-unkocc.cif  TeI.cif  ZnSb_RT_Q28X_VM_20_fxiso.rstr  bucky-plain-bad.xyz  bucky-plain.xyz  bucky-raw.xyz  bucky.xyz  customsg.cif  hexagon-raw-bad.xyz  hexagon-raw.xyz
(+187 files in other folders)
